# poodle

./: .gitignore  CMakeLists.txt  README.md  go.mod  poodle.go
.github/workflows/: build.yml
include/: oodle2base.h  oodle2net.h
src/: entrypoint.cpp
