cmake_minimum_required(VERSION 3.16)
project(poodle DESCRIPTION "oodle decoder")
include_directories(${CMAKE_SOURCE_DIR}/include)
link_directories(${CMAKE_SOURCE_DIR}/lib)
add_library(poodle SHARED src/entrypoint.cpp)
if (WIN32)
    target_link_libraries(poodle oo2net_win64.lib)
else()
    target_link_libraries(poodle liboo2netlinux64.a)
endif()
target_compile_features(poodle PUBLIC cxx_std_20)
